sending the page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,72 @@
-<h1>Daniel Faria is the BEST!</h1>
+<h1>Welcome to CSE Motors!</h1>
+<div class="vehicles">
+  <div class="vehicles_datails">
+    <h2>DMC Delorian</h2>
+    <p>3 Cup holders</p>
+    <p>Superman doors</p>
+    <p>Fuzzy dice!</p>
+    <button class="btn-own-today">Own Today</button>
+  </div>
+  <picture>
+    <source
+      media="(max-width: 768px)"
+      srcset="./images/vehicles/delorean-tn.jpg"
+    />
+    <img
+      src="./images/vehicles/delorean.jpg"
+      alt="DMC Delorian"
+      class="vehicles_image"
+    />
+  </picture>
+</div>
+<div class="vehicles_reviews_upgrades">
+  <div class="vehicles_organization">
+    <div class="car_reviews">
+      <h3>DMC Delorean Reviews</h3>
+      <ul class="reviews">
+        <li>"So feast it's almost like traveling in time." (4/5)</li>
+        <li>"Coolest ride on the road." (4/5)</li>
+        <li>"I'm feeling Marty McFly!" (5/5)</li>
+        <li>"The most futuristic ride of our day." (4.5/5)</li>
+        <li>"80's livin and I love it!" (5/5)</li>
+      </ul>
+    </div>
+  </div>
+  <div class="car_upgrades">
+    <h3>DMC Delorean Upgrades</h3>
+    <div class="container_upgrades">
+      <div class="upgrade">
+        <img
+          src="/images/upgrades/flux-cap.png"
+          alt="flux capacitor"
+          class="upgrade_img"
+        />
+        <p>Flux Capacitor</p>
+      </div>
+      <div class="upgrade">
+        <img
+          src="/images/upgrades/flame.jpg"
+          alt="Flame Decals"
+          class="upgrade_img"
+        />
+        <p>Flame Decals</p>
+      </div>
+      <div class="upgrade">
+        <img
+          src="/images/upgrades/bumper_sticker.jpg"
+          alt="Bumper Stickers"
+          class="upgrade_img"
+        />
+        <p>Bumper Stickers</p>
+      </div>
+      <div class="upgrade">
+        <img
+          src="/images/upgrades/hub-cap.jpg"
+          alt="Hub Caps"
+          class="upgrade_img"
+        />
+        <p>Hub Caps</p>
+      </div>
+    </div>
+  </div>
+</div>
