--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,15 +7,14 @@
 
 :root {
 
-  --color-dark-gray: #232232;
-  --color-car-details: #01b0d3;
-  --color-backgoud: #01b0d314;
+  --color-red: #b82025;
+  --color-car-details: #b82025;
+  --color-backgoud: #b8202514;
 }
 
 /************* Index Page **************/
 
 html {
-  height: 100%;
   margin: 0;
   padding: 0;
   display: flex;
@@ -24,7 +23,7 @@ html {
 }
 
 header {
-  background-color: var(--color-dark-gray);
+  background-color: var(--color-red);
   color: white;
   padding: 1rem;
   text-align: center;
@@ -64,18 +63,23 @@ h3 {
   margin-inline-end: 0px;
   font-weight: bold;
   unicode-bidi: isolate;
+  color: var(--color-red);
+}
+
+h1{
+  color: var(--color-red);
 }
 
 .siteName a {
   font-size: 2rem;
   font-weight: bold;
-  color: var(--color-dark-gray);
+  color: var(--color-red);
   text-decoration: none;
 }
 
 #tools a {
   font-size: 16px;
-  color: var(--color-dark-gray);
+  color: var(--color-red);
   text-decoration: none;
 }
 
@@ -84,7 +88,7 @@ h3 {
 }
 
 nav {
-  background-color: var(--color-dark-gray);
+  background-color: var(--color-red);
   width: 100%;
 }
 
@@ -105,6 +109,13 @@ nav ul li {
   font-size: 16px;
   text-transform: uppercase;
   flex-wrap: wrap;
+  font-weight: 700;
+  transition: transform 0.2s ease;
+}
+
+nav ul li:hover {
+  transform: scale(1.3);
+
 }
 
 main {
@@ -131,7 +142,6 @@ main {
 }
 
 .vehicles_datails {
-
   background: var(--color-backgoud);
   color: black;
   display: flex;
@@ -152,13 +162,19 @@ main {
 }
 
 .btn-own-today {
-  background-color: var(--color-car-details);
-  color: var(--color-dark-gray);
+  background-color: var(--color-red);
+  color: white;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   margin: 0.25rem;
+  font-weight: 700;
+  transition: transform 0.2s ease;
+}
+
+.btn-own-today:hover {
+  transform: scale(1.1); /* Aumenta o botão em 10% */
 }
 
 picture {
@@ -210,9 +226,10 @@ picture {
 }
 
 .upgrade p {
-  color: var(--color-dark-gray);
+  color: white;
   margin: 0;
   margin-top: 0.25rem;
+  font-weight: 700;
 }
 
 
