--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -308,7 +308,7 @@ picture {
 
   .vehicles_reviews_upgrades {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
   }
