--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
+<%- messages() %>
 <div class="vehicles">
   <div class="vehicles_datails">
     <h2>DMC Delorian</h2>
