--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -2,10 +2,16 @@
   <h1><%= title %></h1>
   <p>Create a new account.</p>
 
-  <!-- Exibe mensagens flash -->
   <%- messages() %>
 
-  <!-- Formulário de registro -->
+  <% if (errors) { %>
+    <ul class="notice">
+      <% errors.array().forEach(error => { %>
+        <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
+  <% } %>
+
   <form action="/account/register" method="POST" class="register-form">
     <div class="form-group">
       <label for="account_firstname">First name:</label>
@@ -42,13 +48,15 @@
     </div>
     <div class="form-group">
       <label for="account_password">Password:</label>
+      <span class="span_password">Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span> 
+
       <input
         type="password"
         id="account_password"
         name="account_password"
         required
         placeholder="Enter your password"
-        pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*])(.{12,})$"
+        pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"        
         title="Password must be at least 12 characters, including 1 uppercase letter, 1 number, and 1 special character (!@#$%^&*)."
       />
     </div>
