--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -4,7 +4,15 @@
 
   <%- messages() %>
 
-  <form action="/account/login" method="POST" class="login-form">
+  <% if (errors) { %>
+    <ul class="notice">
+      <% errors.array().forEach(error => { %>
+        <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
+  <% } %>
+
+  <form id="loginForm" action="/account/login" method="post" class="login-form">
     <div class="form-group">
       <label for="email">Email:</label>
       <input
@@ -13,6 +21,7 @@
         name="email"
         required
         placeholder="Enter your email"
+        value="<%= locals.email || '' %>"
       />
     </div>
     <div class="form-group">
@@ -24,11 +33,11 @@
         required
         placeholder="Enter your password"
         pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
-        />
+      />
     </div>
     <div class="form-buttons" style="display: flex; gap: 10px; margin-top: 15px;">
       <button type="submit" class="btn-submit">Login</button>
-      <a href="/account/register" class="btn-register" >Register</a>
+      <a href="/account/register" class="btn-register">Register</a>
     </div>
   </form>
 </main>
