--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -6,7 +6,7 @@
 
   <% if (errors) { %>
     <ul class="notice">
-      <% errors.array().forEach(error => { %>
+      <% errors.forEach(error => { %>
         <li><%= error.msg %></li>
       <% }) %>
     </ul>
@@ -17,39 +17,35 @@
       <label for="account_firstname">First name:</label>
       <input
         type="text"
-        id="account_firstname"
         name="account_firstname"
+        id="accountFirstname"
         required
-        placeholder="Enter your first name"
-        value="<%= locals.account_firstname || '' %>"
+        value="<%= locals.account_firstname %>"
       />
     </div>
     <div class="form-group">
       <label for="account_lastname">Last name:</label>
       <input
         type="text"
-        id="account_lastname"
         name="account_lastname"
+        id="accountLastname"
         required
-        placeholder="Enter your last name"
-        value="<%= locals.account_lastname || '' %>"
+        value="<%= locals.account_lastname %>"
       />
     </div>
     <div class="form-group">
       <label for="account_email">Email address:</label>
       <input
         type="email"
-        id="account_email"
         name="account_email"
+        id="accountEmail"
         required
-        placeholder="Enter your email address"
-        value="<%= locals.account_email || '' %>"
+        value="<%= locals.account_email %>"
       />
     </div>
     <div class="form-group">
       <label for="account_password">Password:</label>
       <span class="span_password">Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span> 
-
       <input
         type="password"
         id="account_password"
