--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,7 +6,7 @@
 
   <% if (errors) { %>
     <ul class="notice">
-      <% errors.array().forEach(error => { %>
+      <% errors.forEach(error => { %>
         <li><%= error.msg %></li>
       <% }) %>
     </ul>
@@ -14,22 +14,22 @@
 
   <form id="loginForm" action="/account/login" method="post" class="login-form">
     <div class="form-group">
-      <label for="email">Email:</label>
+      <label for="account_email">Email:</label>
       <input
         type="email"
-        id="email"
-        name="email"
+        id="account_email"
+        name="account_email"
         required
         placeholder="Enter your email"
-        value="<%= locals.email || '' %>"
+        value="<%= locals.account_email || '' %>"
       />
     </div>
     <div class="form-group">
-      <label for="password">Password:</label>
+      <label for="account_password">Password:</label>
       <input
         type="password"
-        id="password"
-        name="password"
+        id="account_password"
+        name="account_password"
         required
         placeholder="Enter your password"
         pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
