--- a/public/css/login.css
+++ b/public/css/login.css
@@ -53,7 +53,9 @@
   border-color: var(--color-car-details);
 }
 
-.btn-submit {
+.btn-submit,
+.btn-new-classification,
+.btn-new-inventory {
   background-color: var(--color-red);
   color: white;
   padding: 0.5rem 1rem;
@@ -67,8 +69,27 @@
   transition: transform 0.2s ease;
 }
 
-.btn-submit:hover, .btn-register:hover {
+.btn-submit:hover,
+.btn-register:hover,
+.btn-new-classification:hover,
+.btn-new-inventory:hover {
   transform: scale(1.1);
+}
+
+.btn-new-classification,
+.btn-new-inventory {
+  text-decoration: none;
+  margin: 1rem;
+}
+
+.inventory-management {
+  display: flex;
+}
+
+.management-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .btn-register {
@@ -77,7 +98,7 @@
   text-decoration: none;
   background: #f0f0f0;
   border: 1px solid var(--color-red);
-  border-radius: 5px; 
+  border-radius: 5px;
   color: var(--color-red);
   cursor: pointer;
   font-family: 'Montserrat', sans-serif;
