--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,6 +22,15 @@ html {
   justify-content: center;
 }
 
+
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 header {
   background-color: var(--color-red);
   color: white;
@@ -30,16 +39,30 @@ header {
 }
 
 body {
+  min-height: 100vh;
   background-size: cover;
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+}
+
+footer {
+  background-color: var(--color-red);
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  margin-top: auto;
+
 }
 
 #wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 80vw;
+  flex: 1;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   text-align: center;
@@ -125,6 +148,11 @@ nav ul li a {
 
 main {
   margin-top: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .reviews {
@@ -249,6 +277,51 @@ picture {
   font-size: 0.9em;
   margin-top: 5px;
   display: block;
+}
+
+#inv-display {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+#inv-display li {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border: var(--color-red) solid 1px;
+  border-radius: 8px;
+  width: 18rem;
+  height: 18rem;
+}
+
+h2 a {
+  color: var(--color-red);
+  text-decoration: none;
+  transition: all 0.3s ease-in-out; 
+}
+
+h2 a:hover {
+  text-decoration: underline;
+  transform: scale(1.3);
+}
+
+.namePrice {
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 @media (min-width: 768px) {
