--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,3 +8,5 @@
     <link rel="stylesheet" href="/css/vehicle-detail.css">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/addNewInventary.css">
+</head>
