--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,4 +9,5 @@
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/register.css">
     <link rel="stylesheet" href="/css/addNewInventary.css">
+    <link rel="stylesheet" href="/css/uploadInventory.css">
 </head>
