--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,14 +1,28 @@
 <h1><%= title %></h1>
 <% if (messages && messages.notice) { %>
-<p class="notice"><%= messages.notice %></p>
-<% } %> <% if (errors) { %>
-<ul class="errors">
-  <% errors.forEach(error => { %>
-  <li><%= error.msg %></li>
-  <% }) %>
-</ul>
-<% } %> <% if (locals.loggedin) { %>
-<p>Welcome, <%= locals.accountData.account_firstname %>! You're logged in.</p>
-<% } else { %>
-<p>You're logged in</p>
+  <p class="notice"><%= messages.notice %></p>
 <% } %>
+<% if (errors) { %>
+  <ul class="errors">
+    <% errors.forEach(error => { %>
+      <li><%= error.msg %></li>
+    <% }) %>
+  </ul>
+<% } %>
+<% if (locals.loggedin) { %>
+  <p>Welcome, <%= locals.accountData.account_firstname %>! You're logged in.</p>
+<% } else { %>
+  <p>Please log in to manage the inventory.</p>
+  <a href="/account/login">Login</a>
+<% } %>
+<h2 class="select_classification">Select a Classification</h2>
+<%- classificationSelect %>
+<div>
+  <a href="/inv/add-classification" class="classifications_button">Add New Classification</a>
+  <a href="/inv/add-inventory" class="classifications_button">Add New Vehicle</a>
+</div>
+<h2>Manage Inventory</h2>
+<p>Select a classification from the list to see the items belonging to the classification.</p>
+<div id="inventoryDisplay"></div>
+<noscript>JavaScript must be enabled to use this page.</noscript>
+<script src="/js/inventory.js"></script>
