enviando update account

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,4 +10,5 @@
     <link rel="stylesheet" href="/css/register.css">
     <link rel="stylesheet" href="/css/addNewInventary.css">
     <link rel="stylesheet" href="/css/uploadInventory.css">
+    <link rel="stylesheet" href="/css/updateAccount.css">
 </head>
