--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,14 +1,21 @@
 <h1><%= title %></h1>
-<% if (messages && messages.notice) { %>
-<p class="notice"><%= messages.notice %></p>
-<% } %> <% if (errors) { %>
-<ul class="errors">
-  <% errors.forEach(error => { %>
-  <li><%= error.msg %></li>
-  <% }) %>
-</ul>
-<% } %> <% if (locals.loggedin) { %>
-<p>Welcome, <%= locals.accountData.account_firstname %>! You're logged in.</p>
-<% } else { %>
-<p>You're logged in</p>
-<% } %>
+  <% if (messages && messages.notice) { %>
+    <p class="notice"><%= messages.notice %></p>
+  <% } %>
+  <% if (errors) { %>
+    <ul class="errors">
+      <% errors.forEach(error => { %>
+        <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
+  <% } %>
+  <% if (locals.loggedin) { %>
+    <h2>Welcome <%= locals.accountData.account_firstname %></h2>
+    <p><a href="/account/update/<%= locals.accountData.account_id %>">Update Account Information</a></p>
+    <% if (locals.accountData.account_type === "Employee" || locals.accountData.account_type === "Admin") { %>
+      <h3>Inventory Management</h3>
+      <p><a href="/inv/">Manage Inventory</a></p>
+    <% } %>
+  <% } else { %>
+    <p>Please log in to manage your account.</p>
+  <% } %>
